--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,11 @@
   </head>
   <body>
 <form class="search-form">
-  <input type="text" name="query" placeholder="Search images..." required>
+  <input type="text" name="query" placeholder="Search images...">
   <button type="submit">Search</button>
 </form>
 <div class="gallery"></div>
+<div class="loader"></div>
 <script type="module" src="./main.js"></script>
   </body>
 </html>
